apps/base/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    toolkit.fluxcd.io/tenant: security
