apps/base/keycloak/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
  namespace: keycloak
  labels:
    app: keycloak-postgres
spec:
  selector:
    app: keycloak-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
